fix img alignment bug in undergrad section

--- a/src/pages/HermanosPage/HermanosPageStyles.css
+++ b/src/pages/HermanosPage/HermanosPageStyles.css
@@ -146,50 +146,59 @@ h2.centered-title {
   color: #653819;
 }
 
-.undergrad-circle {
-  width: 30vw; /* Set a standard size for wider screens */
-  height: 30vw; /* Keeping width and height the same makes it a circle */
-  border-radius: 50%; /* Make it a circle */
-  overflow: hidden; /* Ensure contents (like the image) don't spill out */
-  max-width: 300px; /* Cap on the size so it doesn't get too big on wide screens */
-  max-height: 300px; /* Same cap for height */
-  display: flex; /* Flexbox for centering the image both horizontally and vertically */
-  justify-content: center;
+.undergrad-container {
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  margin-bottom: 30px; /* Spacing between each undergraduate */
+}
+
+.undergrad-circle {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  overflow: hidden;
   position: relative;
 }
 
-/* Adjust size for narrower screens */
-@media (max-width: 768px) {
-  .undergrad-circle {
-    width: 50vw;
-    height: 50vw;
-    max-width: none; /* Removing the cap for narrow screens */
-    max-height: none; /* Removing the cap for narrow screens */
-  }
-}
-
-/* Image styling */
 .undergrad-circle img {
-  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* This ensures the image covers the container without distortion */
+  object-fit: cover;
+  transform: translate(
+    -50%,
+    -50%
+  ); /* This centers the image inside the circle */
+}
+
+.undergrad-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px; /* Spacing between the image and the info */
 }
 
 .undergrad-name {
   font-size: 1.5rem;
   text-align: center;
-  color: #cc0000;
+  color: var(--secondary-text-color);
   font-weight: 600;
-  margin-top: 20px; /* Added some margin to push the text down */
 }
 
 .join-date {
   font-size: 1.2rem;
   text-align: center;
-  color: #653819;
+  color: var(--highlight-color);
   margin-top: 0.5rem;
+}
+
+Col.text-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* =========================
@@ -304,9 +313,6 @@ h2.centered-title {
    Responsiveness
    ========================= */
 
-/* =========================
-   Responsiveness
-   ========================= */
 @media only screen and (max-width: 768px) {
   .main-title {
     font-size: 4rem;
